k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: optisight
  labels:
    app.kubernetes.io/name: optisight
    app.kubernetes.io/part-of: optisight-ai
